--- a/public/styles/project.css
+++ b/public/styles/project.css
@@ -44,3 +44,11 @@
     width: 400px;
     height: 300px;
 }
+ul {
+    list-style: none;
+}
+li a {
+    text-decoration: none;
+    color: white;
+    font-family: var(--family2);
+}
