--- a/public/styles/project.css
+++ b/public/styles/project.css
@@ -10,6 +10,10 @@
     display: flex;
 }
 
+.bottomProjectCard {
+    border: 1px solid var(--border-color);
+    margin: 10px;
+}
 .projectCard {
     border: 1px solid var(--border-color);
     width: 50%;
